# Minecraft

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Renderer.cpp  compile_shader.sh  main.cpp
.cache/clangd/index/: main.cpp.45005AD9D92EB3DF.idx
